--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Description here" />
-	<title></title>
-	<!-- 
-		You can connect the CSS to the HTML here, 
+	<title>Bar Harbor, ME</title>
+	<!--
+		You can connect the CSS to the HTML here,
 		inside the head tag. Here is an example:
 		https://www.w3schools.com/tags/tag_link.asp
-	
-		Your CSS is inside the css folder in this project, 
-		so you will link to "css/style.css" instead of just 
+
+		Your CSS is inside the css folder in this project,
+		so you will link to "css/style.css" instead of just
 		"style.css". The css/ represents the folder.
 	-->
 </head>
+
 <body>
-	<!-- 
-	This is an HTML comment. 
+	<h1>Bar Harbor, ME</h1>
+	<img src="https://placehold.co/500x230" />
+	<p>A charming coastal town known for its stunning natural landscapes, vibrant cultural scene, and rich history.
+		Spectacular ocean views, serene lakes, and beautiful gardens offer a tranquil escape from the hustle and
+		bustle of city life. The sunrise from Cadillac Mountain in Acadia National Park is particularly famous, as
+		it's one of the first places in the United States to see the sunrise.</p>
+	<section>
+		<h2>Top Destinations</h2>
+		<ol>
+			<li>
+				<img src="https://placehold.co/500x230" />
+				<h3>Acadia National Park</h3>
+				<p>Located adjacent to Bar Harbor, Acadia National Park offers breathtaking landscapes, from rugged
+					coastlines to forested peaks. It's a paradise for outdoor enthusiasts, with activities such as hiking,
+					biking, and bird watching.</p>
+				<p><a
+						href="https://www.google.com/maps/dir/42.35264,-71.1098368/google+maps+acadia+national+park/@43.5621804,-72.3318445,7z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x4caea3b20ea22925:0x62df220efc555584!2m2!1d-68.2733346!2d44.3385559?entry=ttu">Directions</a>
+					| <a href="https://www.nps.gov/acad/index.htm">More Information</a></p>
+			</li>
+			<li>
+				<img src="https://placehold.co/500x230" />
+				<h3>Mount Desert Island</h3>
+				<p>The largest island off the coast of Maine, is famed for its rugged natural beauty, encompassing the
+					majority of Acadia National Park with its forested peaks, rocky beaches, and glacier-scoured granite
+					cliffs. This idyllic island offers a diverse landscape that attracts outdoor enthusiasts for hiking,
+					biking, and exploring the scenic vistas of Bar Harbor and beyond.</p>
+				<p><a
+						href="https://www.google.com/maps/dir/Boston/Mount+Desert+Island/data=!4m8!4m7!1m2!1m1!1s0x89e3652d0d3d311b:0x787cbf240162e8a0!1m2!1m1!1s0x4cae95dbf4c1a0e5:0xfddc6ecbad64a551!3e0">Directions</a>
+					| <a href="https://acadiamagic.com/mount-desert-island.html">More Information</a></p>
+			</li>
+			<li>
+				<img src="https://placehold.co/500x230" />
+				<h3>Ocean Trail</h3>
+				<p>A stunning 4-mile linear trail that runs along the eastern shore of Mount Desert Island, offering
+					breathtaking views of the Atlantic Ocean, rocky cliffs, and coastal landscapes. Starting from Sand Beach
+					and ending at Otter Cliff, this relatively easy hike is accessible to visitors of all ages</p>
+				<p><a
+						href="https://www.google.com/maps/dir//Ocean+Path,+Bar+Harbor,+ME+04609/@44.3191279,-68.1899831,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x4caeb96766a7aa73:0x6cb8e7a7baadffd7!2m2!1d-68.1899831!2d44.3191279!3e0?entry=ttu">Directions</a>
+					| <a href="https://www.nps.gov/thingstodo/hike-ocean-path-trail.htm">More Information</a></p>
+			</li>
+			<li>
+				<img src="https://placehold.co/500x230" />
+				<h3>Frenchman Bay</h3>
+				<p>Known for its panoramic ocean vistas, vibrant marine life, and the iconic Porcupine Islands that dot its
+					horizon. It serves as a popular spot for sailing, kayaking, and whale watching, offering visitors a
+					serene setting to explore the natural beauty and tranquility of Maine's coastal landscape.</p>
+				<p><a
+						href="https://www.google.com/maps/dir//Frenchman+Bay/@44.4295262,-68.2634591,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x4caec037e3a71433:0x3166e648ede11cec!2m2!1d-68.2222596!2d44.4295336!3e0?entry=ttu">Directions</a>
+					| <a href="https://acadiamagic.com/frenchman-bay.html">More Information</a></p>
+			</li>
+			<li>
+				<img src="https://placehold.co/500x230" />
+				<h3>Egg Rock Light</h3>
+				<p>Guiding mariners since its establishment in 1875, this charming and picturesque lighthouse, with its
+					distinctive white tower and red-roofed keeper's house. It is not open to the public but can be admired
+					from boat tours and certain vantage points along the coast, offering a glimpse into Maine's rich
+					maritime history.</p>
+				<p><a
+						href="https://www.google.com/maps?gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIICAEQABgWGB4yCAgCEAAYFhgeMggIAxAAGBYYHjINCAQQABiGAxiABBiKBTINCAUQABiGAxiABBiKBTINCAYQABiGAxiABBiKBTINCAcQABiGAxiABBiKBdIBCDU3NTNqMGo0qAIAsAIA&um=1&ie=UTF-8&fb=1&gl=us&sa=X&geocode=Kfd5dLD2uK5MMcY0fEfC4xiz&daddr=Egg+Rock+Lighthouse,+Bar+Harbor,+ME+04609">CDirections</a>
+					| <a href="https://visitmaine.com/things-to-do/lighthouses-sightseeing/egg-rock">More Information</a></p>
+			</li>
+		</ol>
+	</section>
+	<section>
+		<h2>Travel Tips</h2>
+		<ul>
+			<li>
+				<p>Pack layers and waterproof gear, as Bar Harbor's weather can be unpredictable, ranging from sunny and
+					warm to foggy and cool, even in summer.</p>
+			</li>
+			<li>
+				<p>Rent a bike or car to explore the island's hidden gems, as many of the best sights and trails in and
+					around Bar Harbor are spread out.</p>
+			</li>
+			<li>
+				<p>Try the local seafood, particularly lobster, at one of Bar Harbor's many waterfront restaurants for a
+					taste of Maine's culinary delights</p>
+			</li>
+			<li>
+				<p>Plan to visit Acadia National Park early in the morning or during the week to avoid the crowds and fully
+					enjoy the park's natural beauty</p>
+			</li>
+			<li>
+				<p>Reserve accommodations and popular tours well in advance, especially if you're visiting during the peak
+					season from June to August.</p>
+			</li>
+		</ul>
+	</section>
+	<section>
+		<h2>Bar Harbor Trivia</h2>
+		<ol>
+			<li>
+				<p>What is the name of the mountain in Acadia National Park that is known for being one of the first places
+					in the United States to see the sunrise?</p>
+			</li>
+			<li>
+				<p>What year was the Egg Rock Light, a notable lighthouse in Frenchman Bay near Bar Harbor, originally
+					built?</p>
+			</li>
+			<li>
+				<p>Bar Harbor is located on which island, the largest off the coast of Maine and a renowned destination for
+					outdoor enthusiasts?</p>
+			</li>
+			<a href="https://www.google.com/">Click for Answers</a>
+		</ol>
+	</section>
+</body>
+
+</html>
+
+<!--
+	This is an HTML comment.
 	It is optional, and you can delete it or use it to
 	source help you get from AI tools like ChatGPT.
 
@@ -32,5 +144,3 @@
 	inside a folder in this project, so you'll need to link
 	to "images/your-image-name.jpg" for the image to show.
 	-->
-</body>
-</html>
