--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Description here" />
 	<title>Bar Harbor, ME</title>
 	<!--
 		You can connect the CSS to the HTML here,
@@ -32,7 +28,8 @@
 				<img src="https://placehold.co/500x230" />
 				<h3>Acadia National Park</h3>
 				<p>Located adjacent to Bar Harbor, Acadia National Park offers breathtaking landscapes, from rugged
-					coastlines to forested peaks. It's a paradise for outdoor enthusiasts, with activities such as hiking,
+					coastlines to forested peaks. It's a paradise for outdoor enthusiasts, with activities such as
+					hiking,
 					biking, and bird watching.</p>
 				<p><a
 						href="https://www.google.com/maps/dir/42.35264,-71.1098368/google+maps+acadia+national+park/@43.5621804,-72.3318445,7z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x4caea3b20ea22925:0x62df220efc555584!2m2!1d-68.2733346!2d44.3385559?entry=ttu">Directions</a>
@@ -53,7 +50,8 @@
 				<img src="https://placehold.co/500x230" />
 				<h3>Ocean Trail</h3>
 				<p>A stunning 4-mile linear trail that runs along the eastern shore of Mount Desert Island, offering
-					breathtaking views of the Atlantic Ocean, rocky cliffs, and coastal landscapes. Starting from Sand Beach
+					breathtaking views of the Atlantic Ocean, rocky cliffs, and coastal landscapes. Starting from Sand
+					Beach
 					and ending at Otter Cliff, this relatively easy hike is accessible to visitors of all ages</p>
 				<p><a
 						href="https://www.google.com/maps/dir//Ocean+Path,+Bar+Harbor,+ME+04609/@44.3191279,-68.1899831,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x4caeb96766a7aa73:0x6cb8e7a7baadffd7!2m2!1d-68.1899831!2d44.3191279!3e0?entry=ttu">Directions</a>
@@ -62,23 +60,24 @@
 			<li>
 				<img src="https://placehold.co/500x230" />
 				<h3>Frenchman Bay</h3>
-				<p>Known for its panoramic ocean vistas, vibrant marine life, and the iconic Porcupine Islands that dot its
+				<p>Known for its panoramic ocean vistas, vibrant marine life, and the iconic Porcupine Islands that dot
+					its
 					horizon. It serves as a popular spot for sailing, kayaking, and whale watching, offering visitors a
 					serene setting to explore the natural beauty and tranquility of Maine's coastal landscape.</p>
-				<p><a
-						href="https://www.google.com/maps/dir//Frenchman+Bay/@44.4295262,-68.2634591,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x4caec037e3a71433:0x3166e648ede11cec!2m2!1d-68.2222596!2d44.4295336!3e0?entry=ttu">Directions</a>
+				<p><a href="https://www.google.com">Directions</a>
 					| <a href="https://acadiamagic.com/frenchman-bay.html">More Information</a></p>
 			</li>
 			<li>
 				<img src="https://placehold.co/500x230" />
 				<h3>Egg Rock Light</h3>
 				<p>Guiding mariners since its establishment in 1875, this charming and picturesque lighthouse, with its
-					distinctive white tower and red-roofed keeper's house. It is not open to the public but can be admired
+					distinctive white tower and red-roofed keeper's house. It is not open to the public but can be
+					admired
 					from boat tours and certain vantage points along the coast, offering a glimpse into Maine's rich
 					maritime history.</p>
-				<p><a
-						href="https://www.google.com/maps?gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIICAEQABgWGB4yCAgCEAAYFhgeMggIAxAAGBYYHjINCAQQABiGAxiABBiKBTINCAUQABiGAxiABBiKBTINCAYQABiGAxiABBiKBTINCAcQABiGAxiABBiKBdIBCDU3NTNqMGo0qAIAsAIA&um=1&ie=UTF-8&fb=1&gl=us&sa=X&geocode=Kfd5dLD2uK5MMcY0fEfC4xiz&daddr=Egg+Rock+Lighthouse,+Bar+Harbor,+ME+04609">CDirections</a>
-					| <a href="https://visitmaine.com/things-to-do/lighthouses-sightseeing/egg-rock">More Information</a></p>
+				<p><a href="https://www.google.com/maps">Directions</a>
+					| <a href="https://visitmaine.com/things-to-do/lighthouses-sightseeing/egg-rock">More
+						Information</a></p>
 			</li>
 		</ol>
 	</section>
@@ -98,11 +97,13 @@
 					taste of Maine's culinary delights</p>
 			</li>
 			<li>
-				<p>Plan to visit Acadia National Park early in the morning or during the week to avoid the crowds and fully
+				<p>Plan to visit Acadia National Park early in the morning or during the week to avoid the crowds and
+					fully
 					enjoy the park's natural beauty</p>
 			</li>
 			<li>
-				<p>Reserve accommodations and popular tours well in advance, especially if you're visiting during the peak
+				<p>Reserve accommodations and popular tours well in advance, especially if you're visiting during the
+					peak
 					season from June to August.</p>
 			</li>
 		</ul>
@@ -111,7 +112,8 @@
 		<h2>Bar Harbor Trivia</h2>
 		<ol>
 			<li>
-				<p>What is the name of the mountain in Acadia National Park that is known for being one of the first places
+				<p>What is the name of the mountain in Acadia National Park that is known for being one of the first
+					places
 					in the United States to see the sunrise?</p>
 			</li>
 			<li>
@@ -119,7 +121,8 @@
 					built?</p>
 			</li>
 			<li>
-				<p>Bar Harbor is located on which island, the largest off the coast of Maine and a renowned destination for
+				<p>Bar Harbor is located on which island, the largest off the coast of Maine and a renowned destination
+					for
 					outdoor enthusiasts?</p>
 			</li>
 			<a href="https://www.google.com/">Click for Answers</a>
