--- a/src/index.html
+++ b/src/index.html
@@ -125,8 +125,8 @@
 					for
 					outdoor enthusiasts?</p>
 			</li>
-			<a href="https://www.google.com/">Click for Answers</a>
 		</ol>
+		<p><a href="https://www.google.com/">Click for Answers</a></p>
 	</section>
 </body>
 
